--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"react-dom": "^16.12.0",
 		"prop-types": "^15.7.2"
 	},
-	"license": "ApacheLicense",
+	"license": "Apache-2.0",
 	"engines": {
 		"node": ">=8.0.0"
 	},
