--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
 		"release:tags": "git push --follow-tags origin master",
 		"build": "node build-tool/build.js",
 		"pre-publish": "npm run lint && npm run build",
-		"publish": "npm run pre-publish && npm publish"
-		,"doc:dev": "docz dev ",
+		"publish": "npm run pre-publish && npm publish",
+		"doc:dev": "docz dev ",
 		"doc:build": "docz build ",
 		"doc:deploy": "npm run doc:build && gh-pages -d docs"
 	},
@@ -36,9 +36,9 @@
 		"dist"
 	],
 	"peerDependencies": {
+		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"prop-types": "^15.7.2"
+		"react-dom": "^16.12.0"
 	},
 	"license": "Apache-2.0",
 	"engines": {
@@ -63,8 +63,7 @@
 			"git add"
 		]
 	},
-	"dependencies": {
-	},
+	"dependencies": {},
 	"devDependencies": {
 		"@babel/cli": "^7.7.0",
 		"@babel/core": "^7.7.2",
@@ -73,16 +72,30 @@
 		"@babel/plugin-transform-runtime": "^7.6.2",
 		"@babel/preset-env": "^7.7.1",
 		"@babel/preset-react": "^7.7.0",
+		"@babel/preset-typescript": "^7.7.4",
+		"@babel/types": "^7.7.4",
 		"@commitlint/cli": "^8.2.0",
 		"@commitlint/config-conventional": "^8.2.0",
 		"@rollup/plugin-replace": "^2.2.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
+		"@types/jest": "^24.0.23",
+		"@types/node": "^12.12.12",
+		"@types/react": "^16.9.13",
+		"@types/react-dom": "^16.9.4",
+		"@types/react-test-renderer": "^16.9.1",
+		"@typescript-eslint/eslint-plugin": "^2.8.0",
+		"@typescript-eslint/parser": "^2.8.0",
+		"autoprefixer": "^9.7.3",
 		"babel-eslint": "^10.0.3",
 		"babel-jest": "^24.9.0",
 		"babel-plugin-minify-dead-code-elimination": "^0.5.1",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+		"babel-plugin-transform-require-ignore": "^0.1.1",
 		"commitizen": "^4.0.3",
+		"concurrently": "^5.0.0",
+		"cross-spawn": "^7.0.1",
+		"docz": "^2.1.1",
 		"eslint": "^6.6.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-airbnb-base": "^14.0.0",
@@ -92,52 +105,35 @@
 		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-react": "^7.16.0",
 		"eslint-plugin-react-hooks": "^1.0.1",
-		"husky": "^3.0.9",
+		"gh-pages": "^2.1.1",
+		"glob": "^7.1.6",
+		"inflected": "^2.0.4",
 		"jest": "^24.9.0",
 		"lint-staged": "^9.4.2",
+		"postcss-preset-env": "^6.7.0",
 		"prettier": "^1.19.1",
 		"pretty-quick": "^2.0.1",
+		"prop-types": "^15.7.2",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
 		"react-test-renderer": "^16.12.0",
+		"read-pkg-up": "^7.0.0",
+		"rimraf": "^3.0.0",
 		"rollup": "^1.26.5",
 		"rollup-plugin-babel": "^4.3.3",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-peer-deps-external": "^2.2.0",
+		"rollup-plugin-postcss": "^2.0.3",
 		"rollup-plugin-size-snapshot": "^0.10.0",
 		"rollup-plugin-terser": "^5.1.2",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"prop-types": "^15.7.2",
 		"standard-version": "^7.0.0",
 		"stylelint": "^12.0.0",
 		"stylelint-config-standard": "^19.0.0",
-		"concurrently": "^5.0.0",
-		"cross-spawn": "^7.0.1",
-		"glob": "^7.1.6",
-		"inflected": "^2.0.4",
-		"read-pkg-up": "^7.0.0",
-		"rimraf": "^3.0.0",
+		"ts-jest": "^24.2.0",
+		"typescript": "^3.7.2",
 		"which": "^2.0.2",
 		"yargs-parser": "^16.1.0"
-		,"docz": "^2.1.1"
-			,"@babel/preset-typescript": "^7.7.4",
-			"@babel/types": "^7.7.4",
-			"@types/jest": "^24.0.23",
-			"@types/node": "^12.12.12",
-			"@types/react": "^16.9.13",
-			"@types/react-dom": "^16.9.4",
-			"@types/react-test-renderer": "^16.9.1",
-			"@typescript-eslint/eslint-plugin": "^2.8.0",
-			"@typescript-eslint/parser": "^2.8.0",
-			"ts-jest": "^24.2.0",
-			"typescript": "^3.7.2"
-		,"autoprefixer": "^9.7.3",
-		"babel-plugin-transform-require-ignore": "^0.1.1",
-		"postcss-preset-env": "^6.7.0",
-		"rollup-plugin-postcss": "^2.0.3"
-		,"gh-pages": "^2.1.1"
-		
-		
 	},
 	"keywords": [
 		"react",
