--- a/package.json
+++ b/package.json
@@ -36,9 +36,27 @@
 		"dist"
 	],
 	"peerDependencies": {
+		"@patternfly/patternfly": "^2.68.4",
+		"@patternfly/react-core": "^3.146.0",
+		"@patternfly/react-icons": "^3.15.12",
+		"@patternfly/react-table": "^2.28.47",
+		"@patternfly/react-tokens": "^2.8.8",
+		"@reduxjs/toolkit": "^1.3.5",
+		"@types/file-saver": "^2.0.1",
+		"@types/humanize-plus": "^1.8.0",
+		"@types/lodash": "^4.14.121",
+		"@types/react-redux": "^7.1.7",
+		"@types/react-router-dom": "^5.1.3",
+		"@types/yup": "^0.26.9",
+		"axios": "^0.19.2",
+		"axios-case-converter": "^0.6.0",
+		"file-saver": "^2.0.2",
+		"formik": "^2.1.4",
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
-		"react-dom": "^16.12.0"
+		"react-dom": "^16.12.0",
+		"react-redux": "^7.2.0",
+		"react-router-dom": "^5.1.2"
 	},
 	"license": "Apache-2.0",
 	"engines": {
@@ -63,7 +81,9 @@
 			"git add"
 		]
 	},
-	"dependencies": {},
+	"dependencies": {
+		"unique-names-generator": "^4.2.0"
+	},
 	"devDependencies": {
 		"@babel/cli": "^7.7.0",
 		"@babel/core": "^7.7.2",
@@ -82,7 +102,7 @@
 		"@types/jest": "^24.0.23",
 		"@types/node": "^12.12.12",
 		"@types/react": "^16.9.13",
-		"@types/react-dom": "^16.9.4",
+		"@types/react-dom": "^16.9.0",
 		"@types/react-test-renderer": "^16.9.1",
 		"@typescript-eslint/eslint-plugin": "^2.8.0",
 		"@typescript-eslint/parser": "^2.8.0",
