--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "facet-lib",
-	"homepage": "http://mareklibra.github.io/facet-lib",
+	"homepage": "https://github.com/mareklibra/facet-lib",
 	"version": "0.0.4",
 	"description": "",
 	"repository": {
