--- a/package.json
+++ b/package.json
@@ -36,25 +36,52 @@
 		"dist"
 	],
 	"peerDependencies": {
-		"@patternfly/patternfly": "^2.68.4",
-		"@patternfly/react-core": "^3.146.0",
+		"@patternfly/patternfly": "^4.10.31",
+		"@patternfly/react-core": "^4.18.8",
 		"@patternfly/react-icons": "^3.15.12",
-		"@patternfly/react-table": "^2.28.47",
-		"@patternfly/react-tokens": "^2.8.8",
+		"@patternfly/react-table": "^4.5.10",
+		"@patternfly/react-tokens": "^4.4.4",
 		"@reduxjs/toolkit": "^1.3.5",
+		"@tippy.js/react": "^3.1.1",
 		"@types/file-saver": "^2.0.1",
+		"@types/human-date": "^1.4.0",
 		"@types/humanize-plus": "^1.8.0",
 		"@types/lodash": "^4.14.121",
+		"@types/netmask": "^1.0.30",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.0",
+		"@types/react-dom": "^16.9.0",
 		"@types/react-redux": "^7.1.7",
 		"@types/react-router-dom": "^5.1.3",
+		"@types/uuid": "^8.0.0",
 		"@types/yup": "^0.26.9",
+		"@typescript-eslint/eslint-plugin": "^2.24.0",
+		"@typescript-eslint/parser": "^2.24.0",
 		"axios": "^0.19.2",
 		"axios-case-converter": "^0.6.0",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.10.1",
+		"eslint-plugin-cypress": "^2.10.3",
+		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^2.5.0",
 		"file-saver": "^2.0.2",
 		"formik": "^2.1.4",
+		"http-proxy-middleware": "^1.0.3",
 		"humanize-plus": "^1.8.2",
+		"lodash": "^4.17.15",
+		"netmask": "^1.0.6",
+		"prism-react-renderer": "^1.1.1",
+		"react": "^16.13.0",
+		"react-dom": "^16.13.0",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
+		"redux-thunk": "^2.3.0",
+		"reselect": "^4.0.0",
+		"unique-names-generator": "^4.2.0",
+		"uuid": "^8.1.0",
 		"yup": "^0.28.3"
 	},
 	"license": "Apache-2.0",
@@ -90,13 +117,14 @@
 		"@rollup/plugin-replace": "^2.2.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
 		"@types/jest": "^24.0.23",
-		"@types/node": "^12.12.12",
-		"@types/react": "^16.9.13",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-test-renderer": "^16.9.1",
-		"@typescript-eslint/eslint-plugin": "^2.8.0",
-		"@typescript-eslint/parser": "^2.8.0",
+		"@typescript-eslint/eslint-plugin": "^2.24.0",
+		"@typescript-eslint/parser": "^2.24.0",
 		"autoprefixer": "^9.7.3",
 		"babel-eslint": "^10.0.3",
 		"babel-jest": "^24.9.0",
@@ -107,27 +135,29 @@
 		"concurrently": "^5.0.0",
 		"cross-spawn": "^7.0.1",
 		"docz": "^2.1.1",
-		"eslint": "^6.6.0",
+		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-config-prettier": "^6.7.0",
+		"eslint-config-prettier": "^6.10.1",
 		"eslint-plugin-cypress": "^2.10.3",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.1",
-		"eslint-plugin-react": "^7.16.0",
-		"eslint-plugin-react-hooks": "^1.0.1",
+		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^2.5.0",
 		"gh-pages": "^2.1.1",
 		"glob": "^7.1.6",
 		"inflected": "^2.0.4",
 		"jest": "^24.9.0",
 		"lint-staged": "^9.4.2",
+		"node-sass": "^4.13.1",
 		"postcss-preset-env": "^6.7.0",
-		"prettier": "^1.19.1",
+		"prettier": "^2.0.1",
 		"pretty-quick": "^2.0.1",
 		"prop-types": "^15.7.2",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
+		"react": "^16.13.0",
+		"react-dom": "^16.13.0",
+		"react-scripts": "3.4.0",
 		"react-test-renderer": "^16.12.0",
 		"read-pkg-up": "^7.0.0",
 		"rimraf": "^3.0.0",
@@ -142,8 +172,9 @@
 		"standard-version": "^7.0.0",
 		"stylelint": "^12.0.0",
 		"stylelint-config-standard": "^19.0.0",
+		"sw2dts": "^2.6.2",
 		"ts-jest": "^24.2.0",
-		"typescript": "^3.7.2",
+		"typescript": "^3.8.3",
 		"which": "^2.0.2",
 		"yargs-parser": "^16.1.0"
 	},
