--- a/package.json
+++ b/package.json
@@ -1,186 +1,187 @@
 {
-	"name": "facet-lib",
-	"homepage": "https://github.com/mareklibra/facet-lib",
-	"version": "0.0.8",
-	"description": "",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/mareklibra/facet-lib"
-	},
-	"main": "dist/cjs/index",
-	"module": "dist/es/index",
-	"style": "dist/facet-lib.css",
-	"types": "dist/types/index.d.ts",
-	"sideEffects": false,
-	"author": {
-		"name": "mareklibra",
-		"email": ""
-	},
-	"scripts": {
-		"installPeer": "node build-tool/peerDep.js",
-		"test": "jest",
-		"test:dev": "jest --watch",
-		"lint": "eslint src/**/*.{tsx,ts} --fix",
-		"stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less} --fix",
-		"commit": "git-cz",
-		"release": "standard-version",
-		"release:tags": "git push --follow-tags origin master",
-		"prebuild": "yarn installPeer",
-		"build": "node build-tool/build.js",
-		"prepublish": "yarn run lint && yarn run build",
-		"doc:dev": "docz dev ",
-		"doc:build": "docz build ",
-		"doc:deploy": "yarn run doc:build && gh-pages -d docs"
-	},
-	"files": [
-		"dist"
-	],
-	"peerDependencies": {
-		"@patternfly/patternfly": "^4.10.31",
-		"@patternfly/react-core": "^4.18.8",
-		"@patternfly/react-icons": "^3.15.12",
-		"@patternfly/react-table": "^4.5.10",
-		"@patternfly/react-tokens": "^4.4.4",
-		"@reduxjs/toolkit": "^1.3.5",
-		"@tippy.js/react": "^3.1.1",
-		"@types/file-saver": "^2.0.1",
-		"@types/human-date": "^1.4.0",
-		"@types/humanize-plus": "^1.8.0",
-		"@types/lodash": "^4.14.121",
-		"@types/netmask": "^1.0.30",
-		"@types/node": "^12.0.0",
-		"@types/react": "^16.9.0",
-		"@types/react-dom": "^16.9.0",
-		"@types/react-redux": "^7.1.7",
-		"@types/react-router-dom": "^5.1.3",
-		"@types/uuid": "^8.0.0",
-		"@types/yup": "^0.26.9",
-		"@typescript-eslint/eslint-plugin": "^2.24.0",
-		"@typescript-eslint/parser": "^2.24.0",
-		"axios": "^0.19.2",
-		"axios-case-converter": "^0.6.0",
-		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.10.1",
-		"eslint-plugin-cypress": "^2.10.3",
-		"eslint-plugin-prettier": "^3.1.2",
-		"eslint-plugin-react": "^7.19.0",
-		"eslint-plugin-react-hooks": "^2.5.0",
-		"file-saver": "^2.0.2",
-		"formik": "^2.1.4",
-		"http-proxy-middleware": "^1.0.3",
-		"humanize-plus": "^1.8.2",
-		"lodash": "^4.17.15",
-		"netmask": "^1.0.6",
-		"prism-react-renderer": "^1.1.1",
-		"react": "^16.13.0",
-		"react-dom": "^16.13.0",
-		"react-redux": "^7.2.0",
-		"react-router-dom": "^5.1.2",
-		"redux": "^4.0.5",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-thunk": "^2.3.0",
-		"reselect": "^4.0.0",
-		"unique-names-generator": "^4.2.0",
-		"uuid": "^8.1.0",
-		"yup": "^0.28.3"
-	},
-	"license": "Apache-2.0",
-	"engines": {
-		"node": ">=8.0.0"
-	},
-	"config": {
-		"commitizen": {
-			"path": "cz-conventional-changelog"
-		}
-	},
-	"lint-staged": {
-		"{src,docs}/**/*.{js,json,css,jsx,ts,tsx} *.js": [
-			"pretty-quick --staged",
-			"yarn run stylelint",
-			"eslint --fix --quiet --ignore-path .gitignore",
-			"git add"
-		]
-	},
-	"dependencies": {
-		"unique-names-generator": "^4.2.0"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.7.0",
-		"@babel/core": "^7.7.2",
-		"@babel/plugin-proposal-class-properties": "^7.7.0",
-		"@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-		"@babel/plugin-transform-runtime": "^7.6.2",
-		"@babel/preset-env": "^7.7.1",
-		"@babel/preset-react": "^7.7.0",
-		"@babel/preset-typescript": "^7.7.4",
-		"@babel/types": "^7.7.4",
-		"@rollup/plugin-replace": "^2.2.1",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.3.2",
-		"@testing-library/user-event": "^7.1.2",
-		"@types/jest": "^24.0.23",
-		"@types/node": "^12.0.0",
-		"@types/react": "^16.9.0",
-		"@types/react-dom": "^16.9.0",
-		"@types/react-test-renderer": "^16.9.1",
-		"@typescript-eslint/eslint-plugin": "^2.24.0",
-		"@typescript-eslint/parser": "^2.24.0",
-		"autoprefixer": "^9.7.3",
-		"babel-eslint": "^10.0.3",
-		"babel-jest": "^24.9.0",
-		"babel-plugin-minify-dead-code-elimination": "^0.5.1",
-		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-		"babel-plugin-transform-require-ignore": "^0.1.1",
-		"commitizen": "^4.0.3",
-		"concurrently": "^5.0.0",
-		"cross-spawn": "^7.0.1",
-		"docz": "^2.1.1",
-		"eslint": "^6.8.0",
-		"eslint-config-airbnb": "^18.0.1",
-		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-config-prettier": "^6.10.1",
-		"eslint-plugin-cypress": "^2.10.3",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-prettier": "^3.1.2",
-		"eslint-plugin-react": "^7.19.0",
-		"eslint-plugin-react-hooks": "^2.5.0",
-		"gh-pages": "^2.1.1",
-		"glob": "^7.1.6",
-		"inflected": "^2.0.4",
-		"jest": "^24.9.0",
-		"lint-staged": "^9.4.2",
-		"node-sass": "^4.13.1",
-		"postcss-preset-env": "^6.7.0",
-		"prettier": "^2.0.1",
-		"pretty-quick": "^2.0.1",
-		"prop-types": "^15.7.2",
-		"react": "^16.13.0",
-		"react-dom": "^16.13.0",
-		"react-scripts": "3.4.0",
-		"react-test-renderer": "^16.12.0",
-		"read-pkg-up": "^7.0.0",
-		"rimraf": "^3.0.0",
-		"rollup": "^1.26.5",
-		"rollup-plugin-babel": "^4.3.3",
-		"rollup-plugin-commonjs": "^10.1.0",
-		"rollup-plugin-node-resolve": "^5.2.0",
-		"rollup-plugin-peer-deps-external": "^2.2.0",
-		"rollup-plugin-postcss": "^2.0.3",
-		"rollup-plugin-size-snapshot": "^0.10.0",
-		"rollup-plugin-terser": "^5.1.2",
-		"standard-version": "^7.0.0",
-		"stylelint": "^12.0.0",
-		"stylelint-config-standard": "^19.0.0",
-		"sw2dts": "^2.6.2",
-		"ts-jest": "^24.2.0",
-		"typescript": "^3.8.3",
-		"which": "^2.0.2",
-		"yargs-parser": "^16.1.0"
-	},
-	"keywords": [
-		"react",
-		"facet-lib",
-		"library"
-	]
+  "name": "facet-lib",
+  "homepage": "https://github.com/mareklibra/facet-lib",
+  "version": "0.0.8",
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mareklibra/facet-lib"
+  },
+  "main": "dist/cjs/index",
+  "module": "dist/es/index",
+  "style": "dist/facet-lib.css",
+  "types": "dist/types/index.d.ts",
+  "sideEffects": false,
+  "author": {
+    "name": "mareklibra",
+    "email": ""
+  },
+  "scripts": {
+    "installPeer": "node build-tool/peerDep.js",
+    "test": "jest",
+    "test:dev": "jest --watch",
+    "lint": "eslint src/**/*.{tsx,ts,js,jsx} --color --fix",
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
+    "stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less} --fix",
+    "commit": "git-cz",
+    "release": "standard-version",
+    "release:tags": "git push --follow-tags origin master",
+    "prebuild": "yarn installPeer",
+    "build": "node build-tool/build.js",
+    "prepublish": "yarn run lint && yarn run build",
+    "doc:dev": "docz dev ",
+    "doc:build": "docz build ",
+    "doc:deploy": "yarn run doc:build && gh-pages -d docs"
+  },
+  "files": [
+    "dist"
+  ],
+  "peerDependencies": {
+    "@patternfly/patternfly": "^4.10.31",
+    "@patternfly/react-core": "^4.18.8",
+    "@patternfly/react-icons": "^3.15.12",
+    "@patternfly/react-table": "^4.5.10",
+    "@patternfly/react-tokens": "^4.4.4",
+    "@reduxjs/toolkit": "^1.3.5",
+    "@tippy.js/react": "^3.1.1",
+    "@types/file-saver": "^2.0.1",
+    "@types/human-date": "^1.4.0",
+    "@types/humanize-plus": "^1.8.0",
+    "@types/lodash": "^4.14.121",
+    "@types/netmask": "^1.0.30",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^8.0.0",
+    "@types/yup": "^0.26.9",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "axios": "^0.19.2",
+    "axios-case-converter": "^0.6.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "file-saver": "^2.0.2",
+    "formik": "^2.1.4",
+    "http-proxy-middleware": "^1.0.3",
+    "humanize-plus": "^1.8.2",
+    "lodash": "^4.17.15",
+    "netmask": "^1.0.6",
+    "prism-react-renderer": "^1.1.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "unique-names-generator": "^4.2.0",
+    "uuid": "^8.1.0",
+    "yup": "^0.28.3"
+  },
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "{src,docs}/**/*.{js,json,css,jsx,ts,tsx} *.js": [
+      "pretty-quick --staged",
+      "yarn run stylelint",
+      "eslint --fix --quiet --ignore-path .gitignore",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "unique-names-generator": "^4.2.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.4",
+    "@babel/types": "^7.7.4",
+    "@rollup/plugin-replace": "^2.2.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-test-renderer": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
+    "commitizen": "^4.0.3",
+    "concurrently": "^5.0.0",
+    "cross-spawn": "^7.0.1",
+    "docz": "^2.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "gh-pages": "^2.1.1",
+    "glob": "^7.1.6",
+    "inflected": "^2.0.4",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
+    "node-sass": "^4.13.1",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.1",
+    "pretty-quick": "^2.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0",
+    "react-test-renderer": "^16.12.0",
+    "read-pkg-up": "^7.0.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.26.5",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-size-snapshot": "^0.10.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "standard-version": "^7.0.0",
+    "stylelint": "^12.0.0",
+    "stylelint-config-standard": "^19.0.0",
+    "sw2dts": "^2.6.2",
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.8.3",
+    "which": "^2.0.2",
+    "yargs-parser": "^16.1.0"
+  },
+  "keywords": [
+    "react",
+    "facet-lib",
+    "library"
+  ]
 }
