--- a/package.json
+++ b/package.json
@@ -1,41 +1,30 @@
 {
   "name": "facet-lib",
-  "homepage": "https://github.com/mareklibra/facet-lib",
-  "version": "0.0.11",
-  "description": "",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mareklibra/facet-lib"
-  },
-  "main": "dist/cjs/index",
-  "module": "dist/es/index",
-  "style": "dist/facet-lib.css",
-  "types": "dist/types/index.d.ts",
-  "sideEffects": false,
-  "author": {
-    "name": "mareklibra",
-    "email": ""
+  "version": "1.0.0",
+  "description": "React component library for the Bare Metal Installer",
+  "author": "mareklibra",
+  "license": "Apache-2.0",
+  "repository": "mareklibra/facet-lib",
+  "main": "dist/index.js",
+  "module": "dist/index.modern.js",
+  "source": "src/index.ts",
+  "engines": {
+    "node": ">=10"
   },
   "scripts": {
-    "installPeer": "node build-tool/peerDep.js",
-    "test": "jest",
-    "test:dev": "jest --watch",
+    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "prepare": "run-s build",
+    "test": "run-s test:unit test:lint test:build",
+    "test:build": "run-s build",
+    "test:lint": "eslint .",
+    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:watch": "react-scripts test --env=jsdom",
+    "predeploy": "cd example && yarn install && yarn run build",
+    "deploy": "gh-pages -d example/build",
     "lint": "eslint src/**/*.{tsx,ts} --color --fix",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
-    "stylelint": "stylelint src/**/*.{ts,tsx,jsx,js,css,scss,less} --fix",
-    "commit": "git-cz",
-    "release": "standard-version",
-    "release:tags": "git push --follow-tags origin master",
-    "prebuild": "yarn installPeer",
-    "build": "node build-tool/build.js",
-    "prepublish": "yarn run lint && yarn run build",
-    "doc:dev": "docz dev ",
-    "doc:build": "docz build ",
-    "doc:deploy": "yarn run doc:build && gh-pages -d docs"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'"
   },
-  "files": [
-    "dist"
-  ],
   "peerDependencies": {
     "@patternfly/patternfly": "^4.10.31",
     "@patternfly/react-core": "^4.18.8",
@@ -62,8 +51,6 @@
     "lodash": "^4.17.15",
     "netmask": "^1.0.6",
     "prism-react-renderer": "^1.1.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
@@ -71,27 +58,9 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "uuid": "^8.1.0",
-    "yup": "^0.28.3"
-  },
-  "license": "Apache-2.0",
-  "engines": {
-    "node": ">=8.0.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "lint-staged": {
-    "{src,docs}/**/*.{js,json,css,jsx,ts,tsx} *.js": [
-      "pretty-quick --staged",
-      "yarn run stylelint",
-      "eslint --fix --quiet --ignore-path .gitignore",
-      "git add"
-    ]
-  },
-  "dependencies": {
-    "unique-names-generator": "^4.2.0"
+    "yup": "^0.28.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -104,16 +73,7 @@
     "@babel/preset-typescript": "^7.7.4",
     "@babel/types": "^7.7.4",
     "@rollup/plugin-replace": "^2.2.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "@types/react-test-renderer": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -134,17 +94,14 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "gh-pages": "^2.1.1",
     "glob": "^7.1.6",
     "inflected": "^2.0.4",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.13.1",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.0.1",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
-    "react-scripts": "3.4.0",
     "react-test-renderer": "^16.12.0",
     "read-pkg-up": "^7.0.0",
     "rimraf": "^3.0.0",
@@ -163,8 +120,32 @@
     "ts-jest": "^24.2.0",
     "typescript": "^3.8.3",
     "which": "^2.0.2",
-    "yargs-parser": "^16.1.0"
+    "yargs-parser": "^16.1.0",
+
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12.12.38",
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.7",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "microbundle-crl": "^0.13.10",
+    "cross-env": "^7.0.2",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^2.2.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.4",
+    "react-scripts": "^3.4.1"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "react",
     "facet-lib",
