--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
+    "Xprepare": "run-s build",
+    "prepare": "install-peers",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build",
     "lint": "eslint src/**/*.{tsx,ts} --color --fix",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'"
   },
@@ -51,6 +50,8 @@
     "lodash": "^4.17.15",
     "netmask": "^1.0.6",
     "prism-react-renderer": "^1.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
@@ -58,9 +59,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "uuid": "^8.1.0",
-    "yup": "^0.28.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
@@ -73,7 +72,16 @@
     "@babel/preset-typescript": "^7.7.4",
     "@babel/types": "^7.7.4",
     "@rollup/plugin-replace": "^2.2.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12.12.38",
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.7",
     "@types/react-test-renderer": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
@@ -82,26 +90,38 @@
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "commitizen": "^4.0.3",
     "concurrently": "^5.0.0",
+    "cross-env": "^7.0.2",
     "cross-spawn": "^7.0.1",
     "docz": "^2.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^2.2.0",
     "glob": "^7.1.6",
     "inflected": "^2.0.4",
+    "install-peers-cli": "^2.2.0",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
+    "microbundle-crl": "^0.13.10",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
+    "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.12.0",
     "read-pkg-up": "^7.0.0",
     "rimraf": "^3.0.0",
@@ -120,28 +140,7 @@
     "ts-jest": "^24.2.0",
     "typescript": "^3.8.3",
     "which": "^2.0.2",
-    "yargs-parser": "^16.1.0",
-
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^12.12.38",
-    "@types/react": "^16.9.27",
-    "@types/react-dom": "^16.9.7",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "microbundle-crl": "^0.13.10",
-    "cross-env": "^7.0.2",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "gh-pages": "^2.2.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.4",
-    "react-scripts": "^3.4.1"
+    "yargs-parser": "^16.1.0"
   },
   "files": [
     "dist"
