--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "node": ">=10"
   },
   "scripts": {
+    "prebuild": "run-s test",
     "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
     "start": "echo Consider running: yarn sync-to-facet ; echo ; microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
     "sync-to-facet": "FACET_ROOT=../facet ./scripts/sync-dist.sh",
-    "Xprepare": "run-s build",
     "prepare": "install-peers",
-    "test": "run-s test:unit test:lint test:build",
-    "test:build": "run-s build",
+    "test": "run-s test:circular test:lint",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:circular": "dpdm --warning false --tree false src/index.ts | grep 'no circular dependency were found'",
     "test:watch": "react-scripts test --env=jsdom",
     "lint": "eslint src/**/*.{tsx,ts} --color --fix",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'"
@@ -94,6 +94,7 @@
     "cross-env": "^7.0.2",
     "cross-spawn": "^7.0.1",
     "docz": "^2.1.1",
+    "dpdm": "^3.4.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
