--- a/package.json
+++ b/package.json
@@ -26,22 +26,13 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'"
   },
   "peerDependencies": {
-    "@patternfly/patternfly": "^4.10.31",
-    "@patternfly/react-core": "^4.18.8",
+    "@patternfly/patternfly": "^2.68.4",
+    "@patternfly/react-core": "^3.146.0",
     "@patternfly/react-icons": "^3.15.12",
-    "@patternfly/react-table": "^4.5.10",
-    "@patternfly/react-tokens": "^4.4.4",
+    "@patternfly/react-table": "^2.25.6",
+    "@patternfly/react-tokens": "^2.8.8",
     "@reduxjs/toolkit": "^1.3.5",
     "@tippy.js/react": "^3.1.1",
-    "@types/file-saver": "^2.0.1",
-    "@types/human-date": "^1.4.0",
-    "@types/humanize-plus": "^1.8.0",
-    "@types/lodash": "^4.14.121",
-    "@types/netmask": "^1.0.30",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/uuid": "^8.0.0",
-    "@types/yup": "^0.26.9",
     "axios": "^0.19.2",
     "axios-case-converter": "^0.6.0",
     "file-saver": "^2.0.2",
@@ -53,12 +44,13 @@
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "unique-names-generator": "^4.2.0",
     "uuid": "^8.1.0",
     "yup": "^0.28.3"
   },
@@ -76,11 +68,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/file-saver": "^2.0.1",
+    "@types/human-date": "^1.4.0",
+    "@types/humanize-plus": "^1.8.0",
     "@types/jest": "^25.1.4",
+    "@types/lodash": "^4.14.121",
+    "@types/netmask": "^1.0.30",
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-test-renderer": "^16.9.1",
+    "@types/uuid": "^8.0.0",
+    "@types/yup": "^0.26.9",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "autoprefixer": "^9.7.3",
@@ -153,6 +154,6 @@
     "library"
   ],
   "dependencies": {
-    "unique-names-generator": "^4.2.0"
+    "react-redux": "^7.2.0"
   }
 }
