Improve PR description generated on release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,10 +39,11 @@ jobs:
       uses: peter-evans/create-pull-request@v2
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        title: Generated - New ${{ env.VERSION }} version
         base: master
         commit-message: Version ${{ env.VERSION }}
         committer: GitHub action executed on release <noreply@github.com>
         author: GitHub action executed on release <noreply@github.com>
-
+        title: Generated - New ${{ env.VERSION }} version
+        body: |
+          Triggered by new tag - https://github.com/mareklibra/facet-lib/releases/tag/${GITHUB_REF#refs/tags/}
 
