--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,4 +43,6 @@ jobs:
           committer: GitHub action executed on release <noreply@github.com>
           author: GitHub action executed on release <noreply@github.com>
           title: Generated - New ${{ env.VERSION }} version
-          body: Triggered by new tag - https://github.com/mareklibra/facet-lib/releases/tag/v${{ env.VERSION }}
+          body:
+            Triggered by new tag - https://github.com/mareklibra/facet-lib/releases/tag/v${{
+            env.VERSION }}
