--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "sync-to-facet": "FACET_ROOT=../facet ./scripts/sync-dist.sh",
     "prepare": "install-peers",
     "test": "run-s test:circular test:lint",
-    "test:lint": "eslint .",
+    "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color ./src",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:circular": "dpdm --warning false --tree false src/index.ts | grep 'no circular dependency were found'",
     "test:watch": "react-scripts test --env=jsdom",
-    "lint": "eslint src/**/*.{tsx,ts} --color --fix",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/filanov/bm-inventory/master/swagger.yaml > src/api/swagger.yaml",
     "postupdate-api": "yarn swagger",
