--- a/.github/workflows/mergeToMaster.yaml
+++ b/.github/workflows/mergeToMaster.yaml
@@ -12,12 +12,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install dependencies
-        uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
+        run: npm install
       - name: Build code (includes test)
-        uses: borales/actions-yarn@v2.0.0
         env:
           NODE_OPTIONS: '--max-old-space-size=8192'
-        with:
-          cmd: build
+        run: npm run build
+
