--- a/.github/workflows/mergeToMaster.yaml
+++ b/.github/workflows/mergeToMaster.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-      - name: Install dependencies
+      - name: Install NPM dependencies
         run: npm install
       - name: Build code (includes test)
         env:
