--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,7 +44,7 @@ jobs:
       - run: yarn publish --non-interactive --no-git-tag-version
       - run: |
           echo ${NODE_AUTH_TOKEN} | wc
-      - name: Create Pull Request in facet-lib with updated library version
+      - name: Create Pull Request in openshift-assisted/assisted-ui-lib with updated library version
         uses: peter-evans/create-pull-request@v3
         with:
           base: master
@@ -53,5 +53,5 @@ jobs:
           author: GitHub action executed on release <noreply@github.com>
           title: Generated - New ${{ env.VERSION }} version
           body:
-            Triggered by new tag - https://github.com/mareklibra/facet-lib/releases/tag/v${{
+            Triggered by new tag - https://github.com/openshift-assisted/assisted-ui-lib/releases/tag/v${{
             env.VERSION }}
