Run GH Actions on both master and wizard branches

--- a/.github/workflows/mergeToMainBranches.yaml
+++ b/.github/workflows/mergeToMainBranches.yaml
@@ -1,9 +1,10 @@
-name: Build on merge to master
+name: Build on merge to master or a feature branch
 
 on:
   push:
     branches:
       - master
+      - wizard
 
 jobs:
   build:
