[RFE] Launch uhc-portal and ui-lib in sync with one command
This PR allows launching the uhc-portal and the assisted-ui-lib with one
 command (`yarn start-uhc-portal`)

Signed-off-by: Jonathan Kilzi <jkilzi@redhat.com>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
     "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
     "start-assisted-ui": "./scripts/start-assisted-ui.sh",
-    "sync-to-ui": "ASSISTED_UI_ROOT=../assisted-ui ./scripts/sync-dist.sh",
+    "start-uhc-portal": "./scripts/start-uhc-portal.sh",
+    "sync-to-ui": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
     "test": "run-s test:circular test:lint",
     "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color --max-warnings=0 ./src",
