Do not transpile test files
Signed-off-by: Jonathan Kilzi <jkilzi@redhat.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,10 @@
     "isolatedModules": true,
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "example"]
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "**/*.test.js",
+    "**/*.test.jsx"
+  ]
 }
