Add console dynamic plugin as dev dependency

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "yup": "^0.28.3"
   },
   "devDependencies": {
+    "@openshift-console/dynamic-plugin-sdk": "0.0.0-alpha12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
