MGMT-6485 Initial internationalization (#749)
* Add react-i18next among peer dependencies

* MGMT-6485 Initial internationalization

* Bump react to 16.14.0

Co-authored-by: Jonathan Kilzi <jkilzi@redhat.com>

--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "@reduxjs/toolkit": "1.5.x",
     "@sentry/browser": "5.19.1",
     "axios": "^0.19.2",
+    "i18next": "^20.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
     "lodash": "^4.17.15",
-    "react": "^16.4.0",
+    "react": "^16.14.0",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.11.4",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-tagsinput": "3.19.x",
