chore: adds env-cmd

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prebuild": "run-s clean test",
     "build": "microbundle-crl --no-compress --format modern,cjs --css-modules false",
     "start": "microbundle-crl watch --no-compress --format modern,cjs --css-modules false",
-    "start-assisted-ui": "./scripts/start-assisted-ui.sh",
+    "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
     "start-uhc-portal": "./scripts/start-uhc-portal.sh",
     "sync-to-ui": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
@@ -83,6 +83,7 @@
     "console-sdk-ai-lib": "0.0.1",
     "cross-env": "^7.0.2",
     "dpdm": "^3.4.3",
+    "env-cmd": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-cypress": "^2.10.3",
