Update and rename pullRequest.yaml to test_and_build.yaml
Adds GitFlow branches for those who would like to set it up in their own forks

--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -1,13 +1,21 @@
 name: Build on pull request to master or a feature branch
 
 on:
+  push:
+    branches:
+      - master
+      - main
+      - develop
+      - feature/*
+      - release/*
+      - hotfix/*
   pull_request:
     branches:
       - master
       - main
-      - dev
+      - develop
+      - release/*
       - hotfix/*
-      - integration
 
 jobs:
   build:
