fix: dist folder contains nested src/src subdir
Signed-off-by: jkilzi <jkilzi@redhat.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "declarationDir": "dist",
     "module": "esnext",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
