chore: bumps eslint@^7.11.0
Signed-off-by: Jonathan Kilzi <jkilzi@redhat.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "react-app",
     "react-app/jest",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "@typescript-eslint/explicit-module-boundary-types": "off",
