--- a/package.json
+++ b/package.json
@@ -34,48 +34,40 @@
     "prebuild": "run-s clean test",
     "build": "run-s clean esbuild:prod",
     "start": "run-s clean esbuild:dev",
-    "start-assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
-    "start-uhc-portal": "./scripts/start-uhc-portal.sh",
+    "start:assisted-ui": "env-cmd ./scripts/start-assisted-ui.sh",
+    "start:uhc-portal": "./scripts/start-uhc-portal.sh",
     "sync-dist": "./scripts/sync-dist.sh",
     "prepare": "install-peers",
     "test": "react-scripts test --env=jsdom",
     "test:type-check": "tsc --noEmit",
-    "test:lint": "eslint --ext .js,.jsx,.ts,.tsx --color --max-warnings=0 ./src",
-    "test:ci": "yarn test --watchAll=false --ci --runInBand",
+    "test:lint": "yarn lint",
+    "test:ci": "yarn test --watchAll=false --ci",
     "test:circular": "dpdm --exit-code circular:1 --warning false --tree false src/index.ts",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --color --fix ./src",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx --color --max-warnings=0",
+    "lint:fix": "yarn lint --fix",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/openshift/assisted-service/master/swagger.yaml > src/common/api/swagger.yaml",
     "postupdate-api": "yarn swagger",
     "swagger": "sw2dts -w -o src/common/api/types.ts src/common/api/swagger.yaml",
     "postswagger": "sed -i -r 's/([a-z1-9]+)_([a-z])/\\1\\U\\2/g' src/common/api/types.ts && yarn format"
   },
-  "peerDependencies": {
-    "@patternfly/react-code-editor": "^4.2.92",
-    "@patternfly/react-core": "^4.135.0",
-    "@patternfly/react-icons": "^4.11.0",
-    "@patternfly/react-styles": "^4.12.5",
-    "@patternfly/react-table": "^4.29.0",
-    "@patternfly/react-tokens": "^4.12.0",
-    "@reduxjs/toolkit": "^1.5",
-    "@sentry/browser": "^5.9 || ^6.0",
-    "axios": ">=0.19.2 <1.0.0",
-    "i18next": "^20.4.0 || ^21.0",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "lodash": "^4.17.15",
-    "react": "^16.14.0 || ^17.0",
-    "react-dom": "^16.13.1 || ^17.0",
-    "react-i18next": "^11.11.4",
-    "react-monaco-editor": "^0.43.0",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.1.2",
-    "react-tagsinput": "3.19.x",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0",
-    "swr": ">=0.5.6 <2",
-    "uuid": "^8.1.0",
-    "yup": "^0.28.3"
+  "dependencies": {
+    "axios-case-converter": "^0.8.1",
+    "classnames": "^2.3.1",
+    "esbuild-plugin-d.ts": "^1.0.6",
+    "file-saver": "^2.0.2",
+    "filesize.js": "^2.0.0",
+    "formik": "2.2.6",
+    "fuse.js": "^6.4.6",
+    "http-proxy-middleware": "^1.0.3",
+    "human-date": "^1.4.0",
+    "humanize-plus": "^1.8.2",
+    "ip-address": "^7.1.0",
+    "is-cidr": "^4.0.2",
+    "is-in-subnet": "^3.1.0",
+    "js-yaml": "^4.1.0",
+    "prism-react-renderer": "^1.1.1",
+    "unique-names-generator": "^4.2.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
@@ -105,7 +97,7 @@
     "dpdm": "^3.8.0",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.13.9",
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -126,6 +118,33 @@
     "sw2dts": "^2.6.3",
     "typescript": "^3.8.3"
   },
+  "peerDependencies": {
+    "@patternfly/react-code-editor": "^4.2.92",
+    "@patternfly/react-core": "^4.135.0",
+    "@patternfly/react-icons": "^4.11.0",
+    "@patternfly/react-styles": "^4.12.5",
+    "@patternfly/react-table": "^4.29.0",
+    "@patternfly/react-tokens": "^4.12.0",
+    "@reduxjs/toolkit": "^1.5",
+    "@sentry/browser": "^5.9 || ^6.0",
+    "axios": ">=0.19.2 <1.0.0",
+    "i18next": "^20.4.0 || ^21.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "lodash": "^4.17.15",
+    "react": "^16.14.0 || ^17.0",
+    "react-dom": "^16.13.1 || ^17.0",
+    "react-i18next": "^11.11.4",
+    "react-monaco-editor": "^0.43.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-tagsinput": "3.19.x",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "swr": ">=0.5.6 <2",
+    "uuid": "^8.1.0",
+    "yup": "^0.28.3"
+  },
   "files": [
     "dist"
   ],
@@ -137,24 +156,6 @@
     "assisted-ui-lib",
     "library"
   ],
-  "dependencies": {
-    "axios-case-converter": "^0.8.1",
-    "classnames": "^2.3.1",
-    "esbuild-plugin-d.ts": "^1.0.6",
-    "file-saver": "^2.0.2",
-    "filesize.js": "^2.0.0",
-    "formik": "2.2.6",
-    "fuse.js": "^6.4.6",
-    "http-proxy-middleware": "^1.0.3",
-    "human-date": "^1.4.0",
-    "humanize-plus": "^1.8.2",
-    "ip-address": "^7.1.0",
-    "is-cidr": "^4.0.2",
-    "is-in-subnet": "^3.1.0",
-    "js-yaml": "^4.1.0",
-    "prism-react-renderer": "^1.1.1",
-    "unique-names-generator": "^4.2.0"
-  },
   "jest": {
     "transformIgnorePatterns": [
       "node_modules/(?!(react-monaco-editor|monaco-editor))"
