chore: lint-fix
Signed-off-by: Jonathan Kilzi <jkilzi@redhat.com>

--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "prepare": "install-peers",
     "test": "react-scripts test --env=jsdom",
     "test:type-check": "tsc --noEmit",
-    "test:lint": "yarn lint",
+    "test:lint": "yarn lint --max-warnings=0",
     "test:ci": "yarn test --watchAll=false --ci",
     "test:circular": "dpdm --exit-code circular:1 --warning false --tree false src/index.ts",
-    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx --color --max-warnings=0",
+    "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx --color",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write '**/*.{js,jsx,ts,tsx,json,md,scss,yaml,yml}'",
     "update-api": "curl https://raw.githubusercontent.com/openshift/assisted-service/master/swagger.yaml > src/common/api/swagger.yaml",
